--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,14 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+find_program(CMAKE_CXX_CLANG_TIDY_EXECUTABLE NAMES clang-tidy)
+if (NOT CMAKE_CXX_CLANG_TIDY_EXECUTABLE)
+  message("clang-tidy not found")
+else()
+  message("clang-tidy found")
+  set(CMAKE_CXX_CLANG_TIDY "clang-tidy")
+endif()
+
 enable_testing()
 
 add_subdirectory(src)
